[package]
name = "client"
version = "0.1.0"
authors = ["Wang Xingbin <binboy@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "client"

[dependencies]
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"

[dev-dependencies]
quicli = "0.4.0"
structopt = "0.3.14"
env_logger = "0.7.1"

[[example]]
name = "nats-rs-client"
path = "examples/nats-rs-client/main.rs"